--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "pympipool" %}
-{% set version = "0.0.2" %}
+{% set version = "0.1.0" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/pympipool-{{ version }}.tar.gz
-  sha256: 63bee9f934b460e574d990bd39822d6b7185e8857a2f7a99c46ab52c9dd49c98
+  sha256: 7f583998224a08593d710608026915709b88e6148f19ff428c08bf3d80719556
 
 build:
   entry_points:
@@ -21,11 +21,11 @@ requirements:
     - pip
     - python >=3.6
   run:
-    - dill >=0.3.5.1
-    - mpi4py >=3.1.3
+    - cloudpickle >=2.2.1
+    - mpi4py >=3.1.4
     - python >=3.6
     - openmpi
-    - tqdm >=4.64.0
+    - tqdm >=4.64.1
 
 test:
   imports:
