--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,8 +11,8 @@ source:
 
 build:
   noarch: python
-  script: {{ PYTHON }} -m pip install . -vv
-  number: 0
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+  number: 1
 
 requirements:
   host:
@@ -35,7 +35,7 @@ test:
 
 about:
   home: https://github.com/jan-janssen/pympipool
-  summary: pympipool - scale functions over multiple compute nodes using mpi4py
+  summary: pympipool - scale python functions over multiple compute nodes
   license: BSD-3-Clause
   license_file: LICENSE
 
